# manga-translator-cli

./: .gitignore  LICENSE.md  README.md  bubble.py  bubble_clean.py  main.py  paddle.py  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  bbox.py  bubble.py  bubble_clean.py  bubble_detect.py  config.py  console.py  draw_text.py  image_utils.py  main.py  manga_translate.py  ocr.py  output_manager.py  translate.py
src/fonts/: __init__.py
