[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.5",
    "ultralytics>=8.0.0",
    "huggingface-hub>=0.20.0",
    "ctranslate2>=4.6.3",
    "opencv-python>=4.8.0",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "paddlepaddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"

[[tool.uv.index]]
name = "paddlepaddle-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
